Change history
--------------

Release Candidate 1
===================

- Applied Marc-Andre's patch fixing MR-133
  "TestSupport not working under Mono"

- Removed PropertyBag.Clear() in Controller.cs to restore the ability to
  update the PropertyBag in filters.

- Applied Colin Ramsay <castleproject-devel@happyandlost.co.uk> patch making
  the _selectedViewName field accessible through a public property.

- Checked in changes to better support ASP.NET Views

- Refactor FormHelper to use a common code to CheckboxList and Select. 
  Added support mentioned in MR-130

- Introduced CreateCheckboxList. See preliminary documentation at 
    http://www.castleproject.org/index.php/MonoRail:FormHelper#CheckboxList

- Applied Colin Ramsay <castleproject-devel@happyandlost.co.uk> patch adding more
  asserts to TestSupport.AbstractMRTestCase and refactored some other things

- MR-125 testsupport doesn't handle posting to smart dispatcher controller 
  Fixed by Andrei Shires <andrei@internetware.co.uk>

- FormHelper: Now it can fill parameters with the values from the Request.Params

- FormHelper: fixed Checkbox behavior with databinder by adding a hidden 
  field with the same name but carrying the 'false' value. The false value
  can be overriden with a key 'falseValue' if you're working with a non-boolean
  
  For example
  
  FormHelper.CheckboxField("some.property")
  
  Will render
  
  <input type="checkbox" id="some_property" name="some.property" value="true" />
  <input type="hidden" id="some_propertyH" name="some.property" value="false" />


  FormHelper.CheckboxField("acceptDisclaimer", %{trueValue = 'accept', hiddenValue = 'reject'})
  
  Will render
  
  <input type="checkbox" id="acceptDisclaimer" name="acceptDisclaimer" value="accept" />
  <input type="hidden" id="acceptDisclaimerH" name="acceptDisclaimer" value="reject" />


- Applied Ernst Naezer's patch to allow MR to throw a descriptive
  exception message when two helpers are registered using the same key